changed spacing on home page and fixed button on blog

--- a/public/css/base/base.less
+++ b/public/css/base/base.less
@@ -103,8 +103,8 @@ background-color: white!important;
 }
 
 .captiondetails {
-	color: white!important;
-background-color: #5b6020!important;
+  background-color: white!important;
+  color: black!important;
 }
 
 .actionbeforefooter.bg .container .overlay{
@@ -205,4 +205,8 @@ transition:all 500ms ease-out;
 	border: 2px solid #55331d!important;
 	color:#55331d!important;
 	transition:all 500ms ease-out;
+}
+
+.nav-item a {
+	font-size: 20px;
 }
