--- a/public/css/base/main.less
+++ b/public/css/base/main.less
@@ -156,12 +156,16 @@ color: white;
   color:white;
 }
 
+
+
 .show-all {
-  background-color: white;
-  color:black;
+  background-color:black!important;
+  color:white!important;
+  transition:all 500ms ease-out;
+}
+.show-all:hover {
+  background-color: white!important;
+  color:black!important;
+  transition:all 500ms ease-out;
 }
 
-.show-all:hover {
-  background-color:black;
-  color:white
-}
