--- a/public/css/base/style.less
+++ b/public/css/base/style.less
@@ -1719,7 +1719,7 @@ ul.footermenu li a:hover {
 .actionbeforefooter {
 	background-color:#202020;
 	color:#fff;
-	padding:30px;
+	padding:30px 0 60px 0;
 	position:relative;
 	z-index:1;
 	font-size:18px;
